<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SumOfNumbersActivity"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/choose_difficulty"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty">

        <RadioButton
            android:id="@+id/radioButton00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/easy"
            android:layout_marginBottom="20dp"
            android:textColor="@color/purple_700"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/almost_easy"
            android:textColor="@color/purple_700"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/professional"
            android:textColor="@color/purple_700"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/master"
            android:textColor="@color/purple_700"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ass"
            android:textColor="@color/purple_700"
            android:textSize="24sp" />
    </RadioGroup>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startGame"
        android:background="@drawable/radius"
        android:text="@string/start_game_button"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />
</androidx.constraintlayout.widget.ConstraintLayout>